MovieList Component Done

--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "eslint": "^3.16.1",
+    "eslint-config-standard": "^7.0.0",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^2.0.1",
     "react-scripts": "0.9.3"
   },
   "dependencies": {
+    "axios": "^0.15.3",
+    "eslint": "^3.16.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
